--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,27 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="preload"
+      as="font"
+      href="../src/Fonts/Starcraft-Italic.otf"
+      crossorigin="anonymous"
+      type="font/otf"
+    />
+    <link
+      rel="preload"
+      as="font"
+      href="../src/Fonts/Starcraft-Normal.ttf"
+      crossorigin="anonymous"
+      type="font/ttf"
+    />
+    <link
+      rel="preload"
+      as="font"
+      href="../src/Fonts/Starcraft.otf"
+      crossorigin="anonymous"
+      type="font/otf"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,6 +45,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body>
