--- a/client/public/index.html
+++ b/client/public/index.html
@@ -55,6 +55,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="overlays"></div>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
