--- a/client/public/index.html
+++ b/client/public/index.html
@@ -57,7 +57,7 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>FlipVerse</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
